--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -35,7 +35,7 @@
   amend = commit -a --amend
   co = checkout
   hist = log --pretty=format:\"%h %ad | %s%d [%an]\" --graph --date=short
-  graph = log --graph --oneline --decorate
+  graph = log --graph --all --decorate --stat --date=iso
   recap = log --no-merges --author=mario.fink@goodyear.com --pretty=format:\"%C(yellow)%h%Creset %s %C(cyan)%cD%Creset\"
   unstage = reset HEAD --
   st = status
@@ -56,9 +56,11 @@
   undo-last-merge = reset --hard ORIG_HEAD
   recent = for-each-ref --count=10 --sort=-committerdate refs/heads/ --format="%(refname:short)" # show branches with recent commits
   flight-rules = !open https://github.com/k88hudson/git-flight-rules
-  recent-branches = for-each-ref --count=25 --sort=-committerdate refs/heads/ --format='%(refname:short)'
+  recent-branches = for-each-ref --count=16 --sort=-committerdate refs/heads/ --format='%(refname:short)'
   # https://preslav.me/2020/03/01/use-the-git-history/
   code-changes = "!git log --format=format: --name-only | egrep -v '^$' | sort | uniq -c | sort -rg | head -25"
+  count-lines-of-code = "!git ls-files | xargs wc -l"
+
 
 [pull]
 	rebase = false
