--- a/starship.toml
+++ b/starship.toml
@@ -9,12 +9,12 @@ diverged = "😵"
 untracked = "🤷‍"
 stashed = "📦"
 modified = "📝"
-staged.value = "++"
-staged.style = "green"
-staged_count.enabled = true
-staged_count.style = "green"
+staged = '[++\($count\)](green)'
 renamed = "👅"
 deleted = "🗑"
 
 [package]
 disabled = true
+
+[nodejs]
+symbol="⬢ "
